deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: postersplus
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: postersplus
  ports:
    - name: http
      port: 8000
      targetPort: http
      protocol: TCP
